# aisd22

./: CMakeLists.txt  README.md  mktable.py  mktable2.py
cli/: cli.cpp  mktable.cpp  setup.cpp
functions/: functions.h
ui/: ui.cpp
